syntax = "proto3";

package AccomodationService;

import "google/protobuf/timestamp.proto";

service AccommodationGrpc {
  rpc GetAccommodationInfo(AccommodationRequest) returns (AccommodationResponse);
}

message AccommodationRequest {
  string Id = 1;
}

message Location {
  string street = 1;
  string number = 2;
  string city = 3;
  string state = 4;
}

message AccommodationResponse {
  string name = 1;                // Required
  int32 price = 2;                // Required
  Location location = 3;          // Required
  bool wifi_included = 4;         // Optional
  bool ac_included = 5;           // Optional
  bool free_parking = 6;          // Optional
  int32 min_capacity = 7;         // Required
  int32 max_capacity = 8;         // Required
  repeated bytes image_path = 9;  // Repeated
  string availability = 10;       // Optional
}